--- a/app/src/app.less
+++ b/app/src/app.less
@@ -9,6 +9,13 @@
 @header-height: 200px;
 @grid-width: 20px;
 
+// Only on Mobile.
+@media screen and (max-width: 480px) {
+  .mobile-hide {
+    display: none !important;
+  }
+}
+
 body {
   margin: 0px;
   background-color: @background-color;
@@ -26,6 +33,21 @@ body {
 .app-body {
   padding-left: (100% - @app-width) / 2;
   padding-right: (100% - @app-width) / 2;
+}
+
+.contact-page {
+  margin-top: @grid-width;
+  margin-bottom: @grid-width;
+}
+
+.contact-page-divider {
+  margin-top: @grid-width;
+  margin-bottom: @grid-width;
+}
+
+.contact-page-form {
+  padding-left: 25%;
+  padding-right: 25%;
 }
 
 // Post styling.
