--- a/app/src/app.less
+++ b/app/src/app.less
@@ -6,6 +6,7 @@
 
 // Sizes.
 @app-width: 70%;
+@app-width-mobile: 90%;
 @header-height: 200px;
 @grid-width: 20px;
 
@@ -14,6 +15,10 @@
   .mobile-hide {
     display: none !important;
   }
+}
+
+// Only on Desktop.
+@media screen and (min-width: 480px) {
 }
 
 body {
@@ -33,6 +38,11 @@ body {
 .app-body {
   padding-left: (100% - @app-width) / 2;
   padding-right: (100% - @app-width) / 2;
+
+  @media screen and (max-width: 480px) {
+    padding-left: (100% - @app-width-mobile) / 2;
+    padding-right: (100% - @app-width-mobile) / 2;
+  }
 }
 
 .contact-page {
@@ -48,6 +58,11 @@ body {
 .contact-page-form {
   padding-left: 25%;
   padding-right: 25%;
+
+  @media screen and (max-width: 480px) {
+    padding-left: 5%;
+    padding-right: 5%;
+  }
 }
 
 // Post styling.
