--- a/app/src/app.less
+++ b/app/src/app.less
@@ -36,7 +36,7 @@ body {
   background-color: @primary-color;
 }
 
-.app-navbar {
+.app-navbar, .app-navdrawer {
   background-color: @navbar-color !important;
 }
 
