Fix links in nav drawer

--- a/app/src/app.less
+++ b/app/src/app.less
@@ -38,6 +38,9 @@ body {
 
 .app-navbar, .app-navdrawer {
   background-color: @navbar-color !important;
+  a {
+    text-decoration: none !important;
+  }
 }
 
 .app-body {
