Make card editing experience better on mobile

--- a/app/src/app.less
+++ b/app/src/app.less
@@ -130,3 +130,12 @@ body {
   right: @grid-width;
   bottom: @grid-width;
 }
+
+// Card Editor.
+.card-editor-dialog {
+  width: @app-width !important;
+
+  @media @mobile {
+    width: @app-width-mobile !important;
+  }
+}
