Add redux and use it to hold login state

--- a/app/src/app.less
+++ b/app/src/app.less
@@ -37,6 +37,10 @@ body {
   background-color: @primary-color;
 }
 
+.login-widget {
+  position: fixed;
+}
+
 .app-navbar, .app-navdrawer {
   background-color: @navbar-color !important;
   a {
