--- a/app/src/app.less
+++ b/app/src/app.less
@@ -41,6 +41,22 @@ body {
   position: fixed;
 }
 
+.login-window {
+  max-width: 500px !important;
+}
+
+.login-window-body {
+  min-height: 200px !important;
+}
+
+.login-spinner {
+  position: relative;
+  margin: auto;
+  width: 100px;
+  height: 100px;
+  top: 50px;
+}
+
 .app-navbar, .app-navdrawer {
   background-color: @navbar-color !important;
   a {
