--- a/app/src/app.less
+++ b/app/src/app.less
@@ -126,6 +126,11 @@ body {
   background-color: @primary-color;
   display: inline-block;
   vertical-align: top;
+  overflow: hidden;
+
+  img {
+    width: 100%;
+  }
 }
 
 .app-bio-content {
