Add border to floating logo

--- a/app/src/app.less
+++ b/app/src/app.less
@@ -303,7 +303,9 @@ body {
   width: @floating-logo-size;
 
   // Appearance.
+  border-color: @primary-color;
   border-radius: 100% !important;
+  border-style: solid;
   overflow: hidden;
 
   // Flex center content.
