Confine images rendered by markdown to the card boundaries

--- a/app/src/app.less
+++ b/app/src/app.less
@@ -139,6 +139,13 @@ body {
   }
 }
 
+// Generic card styling for markdown rendered elements.
+.card-body {
+  img {
+    max-width: 100%;
+  }
+}
+
 // Post styling.
 .app-post {
   margin-top: @grid-width;
