Move scroll handling logic out to app-header and add paper to navbar so it keeps the shadow when fixed.

--- a/app/src/app.less
+++ b/app/src/app.less
@@ -101,7 +101,7 @@ body {
   height: @navbar-height !important;
 }
 
-.app-navbar.fixed {
+.app-navbar-container.fixed {
   max-width: @app-header-max-width;
   position: fixed !important;
   top: 0;
