--- a/app/src/app.less
+++ b/app/src/app.less
@@ -153,6 +153,39 @@ body {
   img {
     max-width: 100%;
   }
+
+  // Blockquote styling courtesy of http://www.webmaster-source.com/2012/04/24/pure-css-blockquote-styling/
+  blockquote {
+    font-family: Georgia, serif;
+    font-size: 18px;
+    font-style: italic;
+    margin: 0.25em 0;
+    padding: 0.25em 40px;
+    line-height: 1.45;
+    position: relative;
+    color: #383838;
+  }
+
+  blockquote:before {
+    display: block;
+    content: "\201C";
+    font-size: 80px;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    color: #7a7a7a;
+  }
+
+  blockquote cite {
+    color: #999999;
+    font-size: 14px;
+    display: block;
+    margin-top: 5px;
+  }
+
+  blockquote cite:before {
+    content: "\2014 \2009";
+  }
 }
 
 // Post styling.
