Configurable theme file

--- a/app/src/app.less
+++ b/app/src/app.less
@@ -1,9 +1,9 @@
 
 // Colors.
-@background-color: #DDDDDD;
-@primary-color: #C2DC5D;
-@secondary-color: #59BBE0;
-@error-color: #FF7777;
+@background-color: var(--background-color);
+@primary-color: var(--primary-color);
+@secondary-color: var(--secondary-color);
+@error-color: var(--error-color);
 @navbar-color: @primary-color;
 
 // Sizes.
