Convert dynamic page

--- a/app/src/app.less
+++ b/app/src/app.less
@@ -218,7 +218,7 @@ body {
 }
 
 .floating-button {
-  margin-left: @grid-width;
+  margin-left: @grid-width !important;
   opacity: 0.5;
   &:hover {
     opacity: 1.0;
