Fix some more issues

--- a/app/src/app.less
+++ b/app/src/app.less
@@ -116,6 +116,7 @@ body {
   width: @app-width;
   max-width: @app-max-width;
   margin: auto;
+  padding: @grid-width;
 
   @media @mobile {
     width: @app-width-mobile;
