Add button to insert markdown images

--- a/app/src/app.less
+++ b/app/src/app.less
@@ -99,6 +99,8 @@ body {
 // Generic card styling for markdown rendered elements.
 .card-body {
   img {
+    display: block;
+    margin: auto;
     max-width: 100%;
   }
 
